--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,9 @@ flutter:
     - family: Satisfy
       fonts:
         - asset: fonts/Satisfy-Regular.ttf
+    - family: Adage
+      fonts:
+        - asset: fonts/Adage-Script-JF.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
