--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,27 +30,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^4.10.0
-  firebase_auth: ^4.11.0
-  shared_preferences: ^2.1.1
-  firebase_storage: ^11.2.6
-  firebase_core: ^2.15.1
+  cloud_firestore: ^4.11.0
+  firebase_auth: ^4.11.1
+  shared_preferences: ^2.2.2
+  firebase_storage: ^11.3.1
+  firebase_core: ^2.19.0
   firedart: ^0.9.7
-  cupertino_icons: ^1.0.2
-  google_sign_in: ^6.1.3
-  brasil_fields: ^1.13.1
-  image_picker: ^0.8.7+5
-  syncfusion_flutter_calendar: ^21.2.8
-  flutter_localization: ^0.1.11
-  search_cep: ^4.0.1
-  uuid: ^3.0.7
+  cupertino_icons: ^1.0.6
+  google_sign_in: ^6.1.5
+  brasil_fields: ^1.14.0
+  image_picker: ^1.0.4
+  syncfusion_flutter_calendar: ^23.1.41
+  flutter_localization: ^0.1.14
+  search_cep: ^4.0.2
+  uuid: ^4.1.0
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.3.1
+  flutter_native_splash: ^2.3.4
   mask_text_input_formatter: ^2.5.0
-  url_launcher: ^6.1.12
+  url_launcher: ^6.1.14
   toggle_switch: ^2.1.0
-  font_awesome_flutter: ^10.5.0
-  intl: ^0.18.0
+  font_awesome_flutter: ^10.6.0
+  intl: ^0.18.1
   universal_platform: ^1.0.0+1
   hive: ^2.2.3
   universal_html: ^2.2.4
