--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   hive: ^2.2.3
   universal_html: ^2.2.4
   window_manager: ^0.3.7
+  pdf: ^3.10.4
+  path_provider: ^2.1.1
+  printing: ^5.11.0
+  file_picker: ^6.0.0
 
 dev_dependencies:
   flutter_test:
