--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  cloud_firestore: ^4.12.2
-  firebase_auth: ^4.12.1
-  firebase_storage: ^11.4.1
-  firebase_core: ^2.21.0
+  cloud_firestore: ^4.13.6
+  firebase_auth: ^4.15.3
+  firebase_storage: ^11.5.6
+  firebase_core: ^2.24.2
   shared_preferences: ^2.2.2
   google_sign_in: ^6.1.5
   brasil_fields: ^1.14.0
@@ -38,6 +38,7 @@ dependencies:
   file_picker: ^6.0.0
   open_file: ^3.3.2
   syncfusion_flutter_pdfviewer: ^23.1.43
+  flutter_switch: ^0.3.2
 
 flutter_native_splash:
   color: #B4CABB
