--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,35 +10,39 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.3.0-87.0.dev <4.0.0'
 
+# flutter pub upgrade --major-versions
+#flutter upgrade
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  cloud_firestore: ^4.13.6
-  firebase_auth: ^4.15.3
-  firebase_storage: ^11.5.6
-  firebase_core: ^2.24.2
-  shared_preferences: ^2.2.2
-  google_sign_in: ^6.1.5
-  brasil_fields: ^1.14.0
-  image_picker: ^1.0.4
-  syncfusion_flutter_calendar: ^23.1.44
-  flutter_localization: ^0.1.14
+  cupertino_icons: ^1.0.6
+  cloud_firestore: ^5.2.1
+  firebase_auth: ^5.1.4
+  firebase_storage: ^12.1.3
+  firebase_core: ^3.3.0
+  shared_preferences: ^2.3.1
+  google_sign_in: ^6.2.1
+  brasil_fields: ^1.15.0
+  image_picker: ^1.1.2
+  flutter_localization: ^0.2.1
+  syncfusion_flutter_calendar: ^26.2.8
   search_cep: ^4.0.2
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.3.4
-  mask_text_input_formatter: ^2.5.0
-  url_launcher: ^6.1.14
-  toggle_switch: ^2.1.0
-  font_awesome_flutter: ^10.6.0
-  intl: ^0.18.1
-  window_manager: ^0.3.7
-  pdf: ^3.10.4
-  path_provider: ^2.1.1
-  file_picker: ^6.0.0
+  flutter_native_splash: ^2.4.1
+  mask_text_input_formatter: ^2.9.0
+  url_launcher: ^6.3.0
+  toggle_switch: ^2.3.0
+  font_awesome_flutter: ^10.7.0
+  intl: ^0.19.0
+  window_manager: ^0.3.9
+  pdf: ^3.11.0
+  path_provider: ^2.1.4
+  file_picker: ^8.0.7
   open_file: ^3.3.2
-  syncfusion_flutter_pdfviewer: ^23.1.43
   flutter_switch: ^0.3.2
+  path: ^1.9.0
+  http: ^1.2.2
+  provider: ^6.1.2
 
 flutter_native_splash:
   color: #B4CABB
